[package]
name = "this_is_a_test"
version = "0.0.3"
edition = "2021"
license = "LGPL-2.1-only AND MIT AND BSD-2-Clause"
description = "This is a test"
keywords = ["test", "dev", "firsttime", "toomanywurds", "hi"]
repository = "https://github.com/jordan4ibanez/this_is_a_test"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
